--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
-  "name": "RestfulNode",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.10.2",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.1.1",
-    "express": "~4.11.1",
-    "jade": "~1.9.1",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
-  }
+    "name": "apis",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "express": "~4.9.0",
+        "body-parser": "~1.8.1",
+        "cookie-parser": "~1.3.3",
+        "morgan": "~1.3.0",
+        "serve-favicon": "~2.1.3",
+        "debug": "~2.0.0",
+        "jade": "~1.6.0",
+        "mysql": "*",
+        "sequelize": "*",
+        "passport": "*",
+        "passport-http": "*",
+        "oauth2orize": "*",
+        "bcrypt-nodejs": "*",
+        "jshashes": "*",
+        "connect-ensure-login": "*",
+        "passport-oauth2-client-password": "*",
+        "cookie-session": "*",
+        "crypto": "*",
+        "passport-http-bearer": "*",
+        "node-gcm": "*",
+        "gcm": "*",
+        "apn": "*"
+    }
 }
