--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
-/nbproject/private/
-/node_modules/
-/config/config.js
+*.csv
+*.dat
+*.iml
+*.log
+*.out
+*.pid
+*.seed
+*.sublime-*
+*.swo
+*.swp
+*.tgz
+*.xml
+.DS_Store
+.idea
+.project
+.strong-pm
+coverage
+node_modules
+npm-debug.log
