--- a/package.json
+++ b/package.json
@@ -1,31 +1,29 @@
 {
-  "name": "Fondoo-Node-API",
-  "version": "0.0.0",
+  "name": "RestfulNode",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "apn": "*",
     "body-parser": "~1.10.2",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.1.1",
-    "express": "~4.11.1",
-    "jade": "~1.9.1",
-    "mongoose": "^3.8.24",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",    
-    "passport": "*",
-    "passport-http": "*",
-    "oauth2orize": "*",
     "bcrypt-nodejs": "*",
-    "jshashes": "*",
     "connect-ensure-login": "*",
-    "passport-oauth2-client-password": "*",
+    "cookie-parser": "~1.3.3",
     "cookie-session": "*",
     "crypto": "*",
-    "passport-http-bearer": "*",
-    "node-gcm": "*",
+    "debug": "~2.1.1",
+    "express": "~4.11.1",
+    "express-session": "*",
     "gcm": "*",
-    "apn": "*"
+    "jshashes": "*",
+    "mongoose": "^3.8.24",
+    "morgan": "~1.5.1",
+    "node-gcm": "*",
+    "passport": "*",
+    "passport-localapikey-update": "*",
+    "serve-favicon": "~2.2.0"
+    
   }
 }
