--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Fondoo-Node-API",
-  "version": "0.0.1",
+  "name": "resty",
+  "version": "2.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
