New structure supporting ES6

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "easyappchat-server-es6",
-  "version": "1.0.0",
-  "description": "Easyapp chat server version 2 with ES6 and Promise",
+  "name": "promised-rest",
+  "version": "2.0.0",
+  "description": "Boilerplate API for study",
   "main": "app.js",
   "author": "Mithun Das <mithun.das@jumacro.com>",
   "license": "MIT",
@@ -16,33 +16,41 @@
     "build": "gulp",
     "lint": "esw *.js server config --color",
     "lint:watch": "yarn lint -- --watch",
-    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --colors --compilers js:babel-core/register ./server/**/*.test.js",
+    "lint:fix": "yarn lint -- --fix",
+    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha --ui bdd --reporter spec --colors --compilers js:babel-core/register ./api/**/*.test.js",
     "test:watch": "yarn test -- --watch",
-    "test:coverage": "cross-env NODE_ENV=test ./node_modules/.bin/istanbul cover _mocha -- --ui bdd --reporter spec --colors --compilers js:babel-core/register ./server/**/*.test.js",
+    "test:coverage": "cross-env NODE_ENV=test ./node_modules/.bin/istanbul cover _mocha -- --ui bdd --reporter spec --colors --compilers js:babel-core/register ./api/**/*.test.js",
     "test:check-coverage": "yarn test:coverage && istanbul check-coverage",
     "report-coverage": "coveralls < ./coverage/lcov.info"
   },
   "repository": {
     "type": "git",
-    "url": "https://mdas79@bitbucket.org/easyappt/easyappchat-server-es6.git"
+    "url": "https://github.com/jumacro/PromisedRest.git"
   },
   "dependencies": {
-    "bluebird": "^3.4.7",
-    "body-parser": "^1.16.0",
+   "bluebird": "^3.5.0",
+    "body-parser": "^1.17.2",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
-    "cors": "^2.8.1",
-    "debug": "^2.6.0",
-    "express": "^4.14.1",
-    "express-validation": "^1.0.1",
-    "express-winston": "^2.1.3",
-    "helmet": "^3.4.0",
+    "cors": "^2.8.3",
+    "crypto-js": "^3.1.9-1",
+    "debug": "^2.6.8",
+    "express": "^4.15.3",
+    "express-winston": "^2.4.0",
+    "helmet": "^3.6.1",
     "http-status": "^1.0.1",
-    "joi": "^10.2.1",
-    "method-override": "^2.3.7",
-    "moment": "^2.17.1",
-    "mongoose": "^4.8.1",
-    "morgan": "^1.8.0",
+    "jsonfile": "4.0.0",
+    "jsonwebtoken": "^7.4.1",
+    "method-override": "^2.3.9",
+    "mongoose": "^4.10.2",
+    "morgan": "^1.8.2",
+    "multer": "^1.3.0",
+    "multiparty": "^4.1.3",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
+    "uniqid": "^4.1.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
@@ -53,12 +61,13 @@
     "babel-preset-stage-2": "^6.22.0",
     "chai": "^3.5.0",
     "coveralls": "^2.11.16",
-    "cross-env": "^3.1.4",
+    "cross-env": "^5.0.0",
     "del": "^2.2.2",
     "eslint": "^3.15.0",
     "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-fix": "^1.0.3",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-watch": "^2.1.14",
+    "eslint-watch": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-load-plugins": "^1.5.0",
