--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "promised-rest",
+  "name": "ip-api",
   "version": "2.0.0",
-  "description": "Boilerplate API for study",
+  "description": "REST API FOR IP ECOMMERCE PORTAL",
   "main": "app.js",
-  "author": "Mithun Das <mithun.das@jumacro.com>",
+  "author": "localghost <mithun@localghosts.io>",
   "license": "MIT",
   "private": false,
   "engines": {
-    "node": ">=4.6.0",
-    "npm": ">=2.15.9",
-    "yarn": ">=0.20.0"
+    "node": ">=8.12.0",
+    "npm": ">=6.4.1",
+    "yarn": ">=1.10.1"
   },
   "scripts": {
     "start": "gulp serve",
@@ -25,66 +25,64 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jumacro/PromisedRest.git"
+    "url": "https://github.com/Ziac/ip-api.git"
   },
   "dependencies": {
-   "bluebird": "^3.5.0",
-    "body-parser": "^1.17.2",
-    "compression": "^1.6.2",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.3",
-    "crypto-js": "^3.1.9-1",
-    "debug": "^2.6.8",
-    "express": "^4.15.3",
-    "express-winston": "^2.4.0",
-    "helmet": "^3.6.1",
-    "http-status": "^1.0.1",
-    "jsonfile": "4.0.0",
-    "jsonwebtoken": "^7.4.1",
-    "method-override": "^2.3.9",
-    "mongoose": "^4.10.2",
-    "morgan": "^1.8.2",
-    "multer": "^1.3.0",
-    "multiparty": "^4.1.3",
-    "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.1",
-    "uniqid": "^4.1.1",
-    "winston": "^2.3.1"
+    "bluebird": "3.5.2",
+    "body-parser": "1.18.3",
+    "compression": "1.7.3",
+    "cookie-parser": "1.4.3",
+    "cors": "2.8.4",
+    "crypto-js": "3.1.9-1",
+    "debug": "4.0.1",
+    "express": "4.16.3",
+    "express-winston": "3.0.0",
+    "helmet": "3.13.0",
+    "http-status": "1.2.0",
+    "jsonfile": "5.0.0",
+    "jsonwebtoken": "8.3.0",
+    "method-override": "3.0.0",
+    "moment": "2.22.2",
+    "moment-timezone": "0.5.21",
+    "mongoose": "5.3.0",
+    "morgan": "1.9.1",
+    "passport": "0.4.0",
+    "passport-jwt": "4.0.0",
+    "winston": "3.1.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "chai": "^3.5.0",
-    "coveralls": "^2.11.16",
-    "cross-env": "^5.0.0",
-    "del": "^2.2.2",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb-base": "^11.1.0",
-    "eslint-fix": "^1.0.3",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-watch": "^3.1.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-newer": "^1.3.0",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-util": "^3.0.8",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
-    "run-sequence": "^1.2.2",
-    "supertest": "^3.0.0",
-    "validate-commit-msg": "^2.11.1"
+    "@babel/cli": "7.1.2",
+    "@babel/core": "7.1.2",
+    "@babel/preset-env": "7.1.0",
+    "@babel/register": "7.0.0",
+    "babel-plugin-add-module-exports": "1.0.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "chai": "4.2.0",
+    "coveralls": "3.0.2",
+    "cross-env": "5.2.0",
+    "del": "3.0.0",
+    "eslint": "5.6.1",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-fix": "1.0.3",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-watch": "4.0.2",
+    "gulp": "3.9.1",
+    "gulp-babel": "8.0.0",
+    "gulp-load-plugins": "1.5.0",
+    "gulp-newer": "1.4.0",
+    "gulp-nodemon": "2.2.1",
+    "gulp-sourcemaps": "2.6.4",
+    "gulp-util": "3.0.8",
+    "istanbul": "0.4.5",
+    "mocha": "5.2.0",
+    "run-sequence": "2.2.1",
+    "supertest": "3.3.0",
+    "validate-commit-msg": "2.14.0"
   },
   "babel": {
     "presets": [
-      "es2015",
-      "stage-2"
+      "@babel/preset-env"
     ],
     "plugins": [
       "add-module-exports"
